--- a/config.env
+++ b/config.env
@@ -30,7 +30,7 @@ ANTIDELETE_RECOVER_CONVENTION="no"
 #═══════[ MESSAGE HANDLING ]═══════✧#
 STATUS_REACT_EMOJIS="🖤,🩵,❤‍🩹,🤍,💜"
 AUTO_REACT="yes"
-AUTO_CHAT_EMOJIS="🖤,🩵,❤‍🩹,🤍,💜"
+AUTO_READ_EMOJIS="🖤,🩵,❤‍🩹,🤍,💜"
 WELCOME_MESSAGE="no"
 GOODBYE_MESSAGE="no"
 
