--- a/config.env
+++ b/config.env
@@ -29,7 +29,7 @@ ANTIDELETE_RECOVER_CONVENTION="no"
 
 #═══════[ MESSAGE HANDLING ]═══════✧#
 STATUS_REACT_EMOJIS="🤍,🖤,💙,❤‍🩹,💗,💜"
-AUTO_READ_EMOJIS="🤍,🖤,💙,❤‍🩹,💗,💜"
+CUSTOM_REACT_EMOJIS="🤍,🖤,💙,❤‍🩹,💗,💜"
 AUTO_REACT="yes"
 WELCOME_MESSAGE="no"
 GOODBYE_MESSAGE="no"
@@ -40,6 +40,7 @@ HEROKU_API_KEY=
 
 #═══════[ AUTO REACTIONS ]═══════✧#
 AUTO_REACT_STATUS="yes"
+CUSTOM_REACT_EMOJIS="yes"
 AUTO_REPLY_STATUS="no"
 AUTO_REJECT_CALL="no"
 AUTO_BIO="no"
